--- a/src/03-menu-expanded.html
+++ b/src/03-menu-expanded.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
   <meta charset="UTF-8">
-  <title>HTML5 Music Player</title>
+  <title>SoundPlayer</title>
   <link href='assets/css/styles.css' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="assets/css/font-awesome-4.3.0/css/font-awesome.min.css">
   <link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon" />
@@ -62,6 +62,8 @@
       </div>
 
       <div id="expand-bar" class="hidden">
+        <h2>Playlist name</h2>
+
         <form>
           <label for="searchBox">Search</label><div><input id="searchBox" type="search" name="search"></div>
         </form>
