--- a/src/02-playlist-expanded.html
+++ b/src/02-playlist-expanded.html
@@ -5,7 +5,7 @@
   <title>SoundPlayer</title>
   <link href='assets/css/styles.css' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="assets/css/font-awesome-4.3.0/css/font-awesome.min.css">
-  <link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon" />
 </head>
 <body>
 
