--- a/src/02-playlist-expanded.html
+++ b/src/02-playlist-expanded.html
@@ -101,7 +101,7 @@
           </li>
           <li class="track" data-index="4">
             <div><span class="overlay"><i class="fa fa-play"></i></span><img src="assets/img/default.png"></div>
-            <div><p class="title">Free Porno Feat. No Mo &amp; Dj Soundmeth (Produsa De Megiddo)</p>
+            <div><p class="title">Free P Feat. No Mo &amp; Dj Soundmeth (Produsa De Megiddo)</p>
               <p class="artist">In Extremis</p><span title="Remove Track From Player" class="remove-track">×</span>
             </div>
           </li>
