Complete screens for HTML Templates.

--- a/src/01-track-loaded.html
+++ b/src/01-track-loaded.html
@@ -35,7 +35,7 @@
   </ul>
 
   <div id="cover-art">
-    <div id="cover-art-big"></div>
+    <div id="cover-art-big" style="background-image: url('http://netstorage.metrolyrics.com/albums/9414151jpg.jpg');"></div>
     <img id="cover-art-small" alt="cover-art-small" src="http://netstorage.metrolyrics.com/albums/9414151jpg.jpg">
     <div class="instructions">Drop your audio files here.</div>
   </div>
