Added save playlist button.

--- a/src/04-all-tracks.html
+++ b/src/04-all-tracks.html
@@ -44,7 +44,7 @@
       <li class="track active" data-index="0">
         <div><span class="overlay"><i class="fa fa-play"></i></span><img src="http://netstorage.metrolyrics.com/albums/9414151jpg.jpg"></div>
         <div>
-          <button>
+          <button class="add">
             <i class="fa fa-fw fa-plus"></i>
           </button>
           <p class="title">Never Gonna Give You Up</p>
@@ -54,7 +54,7 @@
       <li class="track" data-index="1">
         <div><span class="overlay"><i class="fa fa-play"></i></span><img src="assets/img/default.png"></div>
         <div>
-          <button>
+          <button class="add">
             <i class="fa fa-fw fa-plus"></i>
           </button>
           <p class="title">Va Fi Bine (Produsa De Megiddo)</p>
@@ -64,7 +64,7 @@
       <li class="track" data-index="2">
         <div><span class="overlay"><i class="fa fa-play"></i></span><img src="assets/img/default.png"></div>
         <div>
-          <button>
+          <button class="add">
             <i class="fa fa-fw fa-plus"></i>
           </button>
           <p class="title">Stare De Vineri (Produsa De Megiddo)</p>
@@ -74,7 +74,7 @@
       <li class="track" data-index="3">
         <div><span class="overlay"><i class="fa fa-play"></i></span><img src="assets/img/default.png"></div>
         <div>
-          <button>
+          <button class="add">
             <i class="fa fa-fw fa-plus"></i>
           </button>
           <p class="title">Extreme (Produsa De Megiddo)</p>
@@ -84,7 +84,7 @@
       <li class="track" data-index="4">
         <div><span class="overlay"><i class="fa fa-play"></i></span><img src="assets/img/default.png"></div>
         <div>
-          <button>
+          <button class="add">
             <i class="fa fa-fw fa-plus"></i>
           </button>
           <p class="title">Free P Feat. No Mo &amp; Dj Soundmeth (Produsa De Megiddo)</p>
@@ -94,7 +94,7 @@
       <li class="track" data-index="5">
         <div><span class="overlay"><i class="fa fa-play"></i></span><img src="assets/img/default.png"></div>
         <div>
-          <button>
+          <button class="add">
             <i class="fa fa-fw fa-plus"></i>
           </button>
           <p class="title">Drama De Seara (Produsa De Megiddo)</p>
@@ -104,7 +104,7 @@
       <li class="track" data-index="6">
         <div><span class="overlay"><i class="fa fa-play"></i></span><img src="assets/img/default.png"></div>
         <div>
-          <button>
+          <button class="add">
             <i class="fa fa-fw fa-plus"></i>
           </button>
           <p class="title">Lumea Mea Feat. Ryno (Produsa De Megiddo)</p>
@@ -114,7 +114,7 @@
       <li class="track" data-index="7">
         <div><span class="overlay"><i class="fa fa-play"></i></span><img src="assets/img/default.png"></div>
         <div>
-          <button>
+          <button class="add">
             <i class="fa fa-fw fa-plus"></i>
           </button>
           <p class="title">Pentru Noi (Produsa De Base)</p>
@@ -124,7 +124,7 @@
       <li class="track" data-index="8">
         <div><span class="overlay"><i class="fa fa-play"></i></span><img src="assets/img/default.png"></div>
         <div>
-          <button>
+          <button class="add">
             <i class="fa fa-fw fa-plus"></i>
           </button>
           <p class="title">Noaptea Feat. Nasta (Produsa De Base)</p>
