--- a/src/06-add-track-modal.html
+++ b/src/06-add-track-modal.html
@@ -168,26 +168,26 @@
 
   </div>
 
-  <div id="backdrop"></div>
+  <div id="backdrop">
+    <div class="modal">
+      <h2>Add "Never Gonna Give You Up" to Playlist</h2>
 
-  <div class="modal">
-    <h2>Add "Never Gonna Give You Up" to Playlist</h2>
+      <form>
+        <label for="addToPlaylist">Playlist:</label>
+        <select id="addToPlaylist">
+          <option value="1">Abbey Road</option>
+          <option value="2">Atom Heart</option>
+          <option value="3">What's Going On</option>
+          <option value="4">Slave to the Rhythm</option>
+          <option value="5">Dark Side of the Moon</option>
+          <option value="new">Create New Playlist</option>
+        </select>
+      </form>
 
-    <form>
-      <label for="addToPlaylist">Playlist:</label>
-      <select id="addToPlaylist">
-        <option value="1">Abbey Road</option>
-        <option value="2">Atom Heart</option>
-        <option value="3">What's Going On</option>
-        <option value="4">Slave to the Rhythm</option>
-        <option value="5">Dark Side of the Moon</option>
-        <option value="new">Create New Playlist</option>
-      </select>
-    </form>
-
-    <button>
-      Save
-    </button>
+      <button>
+        Save
+      </button>
+    </div>
   </div>
 </div>
 
